--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\talha.tahir\AppData\Local\Temp\testng-eclipse--975298767\testng-customsuite.xml</span>
+                    <span>C:\Users\talha.tahir\AppData\Local\Temp\testng-eclipse-225865479\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.marina.tests.Mod_7_RatesStorage" class="method navigator-link" hash-for-method="nightly_delete_newley_bucketAndVerify_TC_1104">nightly_delete_newley_bucketAndVerify_TC_1104</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.marina.tests.Mod_7_RatesStorage" class="method navigator-link" hash-for-method="dd_record_without_holiday_TC_1105">dd_record_without_holiday_TC_1105</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,11 +125,11 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="nightly_delete_newley_bucketAndVerify_TC_1104">
-                  </a> <!-- nightly_delete_newley_bucketAndVerify_TC_1104 -->
-                  <span class="method-name">nightly_delete_newley_bucketAndVerify_TC_1104</span>
+                  <a name="dd_record_without_holiday_TC_1105">
+                  </a> <!-- dd_record_without_holiday_TC_1105 -->
+                  <span class="method-name">dd_record_without_holiday_TC_1105</span>
                   <em>
-(Delete newly added buckets and verify rate group)                  </em>
+(Create Nightly rate group with single row and without holiday)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\talha.tahir\AppData\Local\Temp\testng-eclipse--975298767\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\talha.tahir\AppData\Local\Temp\testng-eclipse-225865479\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -174,7 +174,7 @@
               <span class="test-group-name">regression</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">nightly_delete_newley_bucketAndVerify_TC_1104</span>
+                <span class="method-in-group-name">dd_record_without_holiday_TC_1105</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -182,7 +182,7 @@
               <span class="test-group-name">smoke</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">nightly_delete_newley_bucketAndVerify_TC_1104</span>
+                <span class="method-in-group-name">dd_record_without_holiday_TC_1105</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -204,14 +204,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'nightly_delete_newley_bucketAndVerify_TC_1104')
+data.setCell(0, 1, 'dd_record_without_holiday_TC_1105')
 data.setCell(0, 2, 'com.marina.tests.Mod_7_RatesStorage')
-data.setCell(0, 3, 19758);
+data.setCell(0, 3, 18554);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 19 seconds</span>
+              <span class="suite-total-time">Total running time: 18 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -244,19 +244,19 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
                 <span class="method-name">beforeTest</span>
-                <span class="method-start">525 ms</span>
+                <span class="method-start">454 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">nightly_delete_newley_bucketAndVerify_TC_1104</span>
-                <span class="method-start">25989 ms</span>
+                <span class="method-name">dd_record_without_holiday_TC_1105</span>
+                <span class="method-start">20313 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">45752 ms</span>
+                <span class="method-start">38870 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">afterSuite</span>
-                <span class="method-start">49604 ms</span>
+                <span class="method-start">43171 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
