--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="99a379">  <td>23/11/28 06:13:10</td>   <td>0</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@4229bb3f]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1627396964</td>   <td></td> </tr>
-<tr bgcolor="e965f5">  <td>23/11/28 06:13:10</td>   <td>516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@4229bb3f]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1627396964</td>   <td></td> </tr>
-<tr bgcolor="e965f5">  <td>23/11/28 06:13:36</td>   <td>25980</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.nightly_delete_newley_bucketAndVerify_TC_1104()[pri:4, instance:com.marina.tests.Mod_7_RatesStorage@4229bb3f]">nightly_delete_newley_bucketAndVerify_TC_1104</td> 
-  <td>main@1627396964</td>   <td></td> </tr>
-<tr bgcolor="e965f5">  <td>23/11/28 06:13:55</td>   <td>45743</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@4229bb3f]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1627396964</td>   <td></td> </tr>
-<tr bgcolor="99a379">  <td>23/11/28 06:13:59</td>   <td>49596</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@4229bb3f]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1627396964</td>   <td></td> </tr>
+<tr bgcolor="96d072">  <td>23/11/29 05:33:21</td>   <td>0</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@7fee8714]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@538592647</td>   <td></td> </tr>
+<tr bgcolor="f2bbc1">  <td>23/11/29 05:33:22</td>   <td>448</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@7fee8714]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@538592647</td>   <td></td> </tr>
+<tr bgcolor="f2bbc1">  <td>23/11/29 05:33:42</td>   <td>20306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.dd_record_without_holiday_TC_1105()[pri:5, instance:com.marina.tests.Mod_7_RatesStorage@7fee8714]">dd_record_without_holiday_TC_1105</td> 
+  <td>main@538592647</td>   <td></td> </tr>
+<tr bgcolor="f2bbc1">  <td>23/11/29 05:34:00</td>   <td>38863</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@7fee8714]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@538592647</td>   <td></td> </tr>
+<tr bgcolor="96d072">  <td>23/11/29 05:34:05</td>   <td>43164</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@7fee8714]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@538592647</td>   <td></td> </tr>
 </table>
